@@ -1485,7 +1485,6 @@ estate_dhimmi_jewish_advisors = {
 		custom_tooltip = estate_dhimmi_jewish_advisors.tt
 	}
 	penalties = {
-		tolerance_own = -1
 		church_loyalty_modifier = -0.05
 	}
 	benefits = { }
