@@ -293,6 +293,9 @@ second_translation_movement = {
 }
 
 #Others
+corn_cultivation = {
+	trade_goods_size_modifier = 0.25
+}
 orsini_pope = {
 	pap_orsini_influence = 0.05
 }
