@@ -489,7 +489,7 @@ teu_liv_buy_modern_weapons_mission = {
 }
 teu_liv_consistent_capital_mission = {
 	allowed_num_of_manufactories = 1
-	build_cost = -0.1
+	local_build_cost = -0.1
 }
 teu_liv_conquer_lithuania_mission = {
 	prestige_decay = -0.01
