@@ -2720,6 +2720,34 @@ country_event = {
 	}
 }
 
+province_event = {
+	id = hremodevents.61
+	title = "HREMT61"
+	desc = "HREMD61"
+	picture = FARMING_eventPicture
+	goto = root
+
+	trigger = {
+		current_age = age_of_reformation
+		OR = {
+			trade_goods = grain
+			trade_goods = barley
+		}
+		NOT = { devastation = 1 }
+	}
+
+	mean_time_to_happen =  { months = 300 }
+
+	option = {
+		name = "HREMA61"
+		change_trade_goods = corn
+		add_province_modifier = {
+			name = corn_cultivation
+			duration = 1825
+		}
+	}
+}
+
 country_event = {
 	id = hremodevents.62
 	title = "HREMT62"
