@@ -237,4 +237,4 @@
  almoravid_invasion.tt: "We will establish the Almoravid Empire and annex southern Morocco."
  hire_jewish_visirs_title: "Recruit a Jewish Vizier"
  hire_jewish_visirs_desc: "Our religious freedom and cultural openness enables the systematic recruitment of Jewish viziers for our court."
- hire_jewish_visirs.tt: "We will get a discounted §YArtist§! §YNatural Scientist§!, §YStatesman§!, §YTrader§!, §YArmy Reformer§! or §!Quartermaster§! of Jewish religion."
+ hire_jewish_visirs.tt: "We will get a discounted §YArtist§! §YNatural Scientist§!, §YStatesman§!, §YTrader§!, §YArmy Reformer§! or §YQuartermaster§! of Jewish religion."
