@@ -237,4 +237,4 @@
  almoravid_invasion.tt: "Wir werden das Almoravidenreich begründen und Südmarokko annektieren."
  hire_jewish_visirs_title: "Rekrutiert einen jüdischen Wesir"
  hire_jewish_visirs_desc: "Unsere Religionsfreiheit und kulturelle Offenheit ermöglicht die systematische Anwerbung von jüdischen Wesiren für unseren Hof."
- hire_jewish_visirs.tt: "Wir erhalten einen vergünstigten §YKünstler§!, §YNaturwissenschaftler§!, §YStaatsmann§!, §YHändler§!, §YArmeereformer§! oder §!Quartiermeister§!, der der jüdischen Religion angehört."
+ hire_jewish_visirs.tt: "Wir erhalten einen vergünstigten §YKünstler§!, §YNaturwissenschaftler§!, §YStaatsmann§!, §YHändler§!, §YArmeereformer§! oder §YQuartiermeister§!, der der jüdischen Religion angehört."
