@@ -1756,6 +1756,9 @@
  HREMT60: "High King Forces Peace"
  HREMD60: "Apparently the cowards of [From.GetName] have gone behind our backs to demand help from the so-called High King of Ireland. This underhanded rogue should have laughed them out of his castle, but he has seen fit to step into our righteous conflict and demand that we stand down. The ancient privileges of the High King still prevail in the hearts and minds of our people, so we cannot afford to refuse his demands, but we await the day this crooked pretender's power wanes and a more fair High King can be installed!"
  HREMA60: "So be it"
+ HREMT61: "Spread of Maize"
+ HREMD61: "Maize has always been a traditional food of the Native Americans and was brought to Europe by Spanish explorers around 1500s. Thanks to its ability to grow in diverse climates and to be harvested in successive years in the same field, this crop spread rapidly across the continent. By the 18th century, maize was the staple food for most peasants in Western Europe.\nThe [Root.GetTradeGoodsName] farmers of [Root.GetName] have also heard of this wondrous plant and have recently begun to successfully and profitably switch their farming to maize cultivation."
+ HREMA61: "This will boost our food production."
  HREMT62: "[From.GetName] Refuses Mediation"
  HREMD62: "High King [From.Monarch.GetName] has heard our plea for help and has elected to stay out of our conflict. He claims that the office of High King does not exist to serve as the errand-boy for defeated clans, and that we must bear the brunt of the unprovoked aggression against us. His arrogance will not be forgotten, and when we recover from this war we must see to it that [From.GetName] is stripped of their title!"
  HREMA62: "We are on our own"
@@ -2042,6 +2045,7 @@
  HREMT139: "Continuation of the Dutch Water Lines"
  HREMD139: "To protect our country from enemy armies, we have purposefully submerged parts of our land to create natural defensive barriers which protect our cities and confound our enemies. While maintaining this situation is very powerful, it is also expensive and should only be considered in extreme emergencies."
  HREMA139: "Leave the land under water."
+ HREMB139: "Let the water flow back."
  HREMT140: "A Jewish Vizier for [Root.GetName]"
  HREMD140: "Al-Andalus represented the most important center for Jewish culture and science in the 10th century. Thanks to the patronage of the Caliphs, several important Jewish figures held high positions at the Caliphal court. As a result, Al-Andalus attained prosperity and affluence. Jewish scholars at that time made decisive contributions to poetry, philosophy, medicine, geography, mathematics and much more.\n[Root.Monarch.GetTitle] [Root.Monarch.GetName] has decided to promise a committed and emerging Jewish scholar of our country the opportunity to be employed at the [Root.GetAdjective] court. We have not yet decided to whom exactly we will grant this honour. Who do we choose today?"
  HREMA140: "An Artist"
