@@ -1756,6 +1756,9 @@
  HREMT60: "Hochkönig erzwingt Frieden"
  HREMD60: "Anscheinend haben die Feiglinge von [From.GetName] hinter unserem Rücken den sogenannten Hochkönig von Irland um Hilfe gebeten. Dieser hinterhältige Schurke hätte sie aus seinem Schloss auslachen sollen, aber er hat es für angebracht gehalten, in unseren berechtigten Konflikt einzutreten und uns zum Rückzug aufzufordern. Die alten Privilegien des Hochkönigs herrschen immer noch in den Herzen und Köpfen unseres Volkes, so dass wir es uns nicht leisten können, seine Forderungen abzulehnen, aber wir warten auf den Tag, an dem die Macht dieses verlogenen Heuchlers schwindet und ein gerechterer Hochkönig installiert werden kann!"
  HREMA60: "So sei es"
+ HREMT61: "Ausbreitung von Mais"
+ HREMD61: "Mais ist seit jeher ein traditionelles Nahrungsmittel der amerikanischen Ureinwohner und wurde um 1500 von spanischen Entdeckern nach Europa gebracht. Dank seiner Fähigkeit, in diversen Klimazonen zu wachsen und in aufeinanderfolgenden Jahren auf demselben Feld geerntet zu werden, verbreitete sich diese Kulturpflanze rasch über den ganzen Kontinent. Im 18. Jahrhundert war Mais das Grundnahrungsmittel für die meisten Bauern in Westeuropa.\nAuch die Bauern von [Root.GetName] haben von dieser wundersamen Pflanze gehört und haben vor kurzem damit begonnen, ihre Landwirtschaft erfolg- und gewinnbringend auf Maisanbau umzustellen."
+ HREMA61: "This will boost our food production."
  HREMT62: "[From.GetName] verweigert Schlichtung"
  HREMD62: "Hochkönig [From.Monarch.GetName] hat unseren Hilferuf gehört und sich entschieden, sich aus unserem Konflikt herauszuhalten. Er behauptet, dass das Amt des Hochkönigs nicht dazu da ist, als Botenjunge für besiegte Clans zu dienen, und dass wir die volle Verantwortung für die grundlose Aggression gegen uns tragen müssen. Seine Arroganz wird nicht vergessen werden, und wenn wir uns von diesem Krieg erholen, müssen wir dafür sorgen, dass [From.GetName] ihres Titels beraubt wird!"
  HREMA62: "Wir sind auf uns allein gestellt"
