@@ -25,6 +25,8 @@
  building_cathedral_zoroastrian: "Great Fire Temple"
  building_cathedral_buddhism: "Stupa"
 #Misc
+ corn_cultivation: "Cultivation of Maize"
+ desc_corn_cultivation: "The farmers of this province recently switched to maize cultivation."
  potlatch_bad: "We did not like the Banquet"
  potlatch_nice: "We enjoyed the Banquet"
  potlatch_good: "We loved the Banquet"
