@@ -25,6 +25,8 @@
  building_cathedral_zoroastrian: "Großer Feuertempel"
  building_cathedral_buddhism: "Stupa"
 #Misc
+ corn_cultivation: "Anbau von Mais"
+ desc_corn_cultivation: "Die Landwirte dieser Provinz stiegen kürzlich auf Maisanbau um."
  potlatch_bad: "Uns gefiel das Bankett nicht"
  potlatch_nice: "Wir genossen das Bankett"
  potlatch_good: "Wir liebten das Bankett"
